--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,35 @@
 version: '3.8'
 
 services:
+  mysql:
+    container_name: mysql8.0
+    image: arm64v8/mysql:8.0
+    restart: always
+    ports:
+      - 3309:3306
+    environment:
+      TZ: Asia/Shanghai
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: newsCenter
+    volumes:
+      - /Users/wangcheng/mysql/data:/Applications/Docker.app/mysql/data
+      - /Users/wangcheng/mysql/conf:/Applications/Docker.app/mysql/conf
+      - /Users/wangcheng/mysql/logs:/Applications/Docker.app/mysql/logs
+    command:
+      --default-authentication-plugin=mysql_native_password
+      --character-set-server=utf8mb4
+      --collation-server=utf8mb4_general_ci
+      --explicit_defaults_for_timestamp=true
+      --lower_case_table_names=1
+  Redis:
+    container_name: redis6.2
+    image: redis:6.2.1
+    restart: always
+    volumes:
+      - /Users/wangcheng/redis/data:/Applications/Docker.app/redis/data
+      - /Users/wangcheng/redis/redis.conf:/Applications/Docker.app/redis/redis.conf
+    ports:
+      - 6379:6379
   es01:
     container_name: es01
     image: elasticsearch:8.10.2
@@ -125,6 +154,28 @@ services:
     ports:
       - 2379:2379
       - 2380:2380
+  Jaeger:
+    container_name: jaeger
+    image: jaegertracing/all-in-one:1.41
+    restart: always
+    environment:
+      - COLLECTOR_ZIPKIN_HTTP_PORT=9411
+      - SPAN_STORAGE_TYPE=badger
+      - BADGER_EPHEMERAL=false
+      - BADGER_DIRECTORY_VALUE=/badger/data
+      - BADGER_DIRECTORY_KEY=/badger/key
+    privileged: true
+    volumes:
+      - /Users/wangcheng/jaeger:/Applications/Docker.app/jaeger/badger
+    ports:
+      - "5775:5775/udp"
+      - "6831:6831/udp"
+      - "6832:6832/udp"
+      - "5778:5778"
+      - "16686:16686"
+      - "14268:14268"
+      - "14269:14269"
+      - "9411:9411"
 networks:
   my-custom-network:
     driver: bridge
