--- a/user/config/config.yaml
+++ b/user/config/config.yaml
@@ -32,3 +32,5 @@ jwt:
   refreshExp: 14
   accessSecret: newsCenter
   refreshSecret: newsCenter
+jaeger:
+  endpoints: "http://localhost:14268/api/traces"
