--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,11 @@
 version: '3.8'
-
 services:
   mysql:
     container_name: mysql8.0
     image: arm64v8/mysql:8.0
     restart: always
     ports:
-      - 3309:3306
+      - "3310:3306"
     environment:
       TZ: Asia/Shanghai
       MYSQL_ROOT_PASSWORD: root
@@ -29,7 +28,16 @@ services:
       - /Users/wangcheng/redis/data:/Applications/Docker.app/redis/data
       - /Users/wangcheng/redis/redis.conf:/Applications/Docker.app/redis/redis.conf
     ports:
-      - 6379:6379
+      - "6379:6379"
+  mongo:
+    container_name: mongo
+    image: mongo:6.0
+    restart: always
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: 123456
+    ports:
+      - "27017:27017"
   es01:
     container_name: es01
     image: elasticsearch:8.10.2
@@ -152,8 +160,8 @@ services:
     volumes:
       - /Users/wangcheng/etcd/data:/Applications/Docker.app/etcd/data
     ports:
-      - 2379:2379
-      - 2380:2380
+      - 12379:2379
+      - 12380:2380
   Jaeger:
     container_name: jaeger
     image: jaegertracing/all-in-one:1.41
@@ -176,6 +184,31 @@ services:
       - "14268:14268"
       - "14269:14269"
       - "9411:9411"
+  kafka:
+    container_name: kafka
+    image: obsidiandynamics/kafka
+    restart: "no"
+    ports:
+      - "2181:2181"
+      - "9092:9092"
+    environment:
+      KAFKA_LISTENERS: "INTERNAL://:29092,EXTERNAL://:9092"
+      KAFKA_ADVERTISED_LISTENERS: "INTERNAL://kafka:29092,EXTERNAL://localhost:9092"
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: "INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT"
+      KAFKA_INTER_BROKER_LISTENER_NAME: "INTERNAL"
+      KAFKA_ZOOKEEPER_SESSION_TIMEOUT: "6000"
+      KAFKA_RESTART_ATTEMPTS: "10"
+      KAFKA_RESTART_DELAY: "5"
+      ZOOKEEPER_AUTOPURGE_PURGE_INTERVAL: "0"
+  kafdrop:
+    image: obsidiandynamics/kafdrop
+    restart: "no"
+    ports:
+      - "9000:9000"
+    environment:
+      KAFKA_BROKERCONNECT: "kafka:29092"
+    depends_on:
+      - "kafka"
 networks:
   my-custom-network:
     driver: bridge
