--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -38,6 +38,11 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: 123456
     ports:
       - "27017:27017"
+    volumes:
+      - /Users/wangcheng/mongodb/data:/Applications/Docker.app/mongodb/db
+      - /Users/wangcheng/mongodb/conf:/Applications/Docker.app/mongodb/configdb
+      - /Users/wangcheng/mongodb/logs:/Applications/Docker.app/mongodb/log/
+      - /Users/wangcheng/mongodb/tmp:/Applications/Docker.app/mongodb/tmp
   es01:
     container_name: es01
     image: elasticsearch:8.10.2
@@ -184,31 +189,48 @@ services:
       - "14268:14268"
       - "14269:14269"
       - "9411:9411"
+#  kafka:
+#    container_name: kafka
+#    image: obsidiandynamics/kafka
+#    restart: "no"
+#    ports:
+#      - "2181:2181"
+#      - "9092:9092"
+#    environment:
+#      KAFKA_LISTENERS: "INTERNAL://:29092,EXTERNAL://:9092"
+#      KAFKA_ADVERTISED_LISTENERS: "INTERNAL://kafka:29092,EXTERNAL://localhost:9092"
+#      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: "INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT"
+#      KAFKA_INTER_BROKER_LISTENER_NAME: "INTERNAL"
+#      KAFKA_ZOOKEEPER_SESSION_TIMEOUT: "6000"
+#      KAFKA_RESTART_ATTEMPTS: "10"
+#      KAFKA_RESTART_DELAY: "5"
+#      ZOOKEEPER_AUTOPURGE_PURGE_INTERVAL: "0"
   kafka:
-    container_name: kafka
-    image: obsidiandynamics/kafka
+    container_name: kafka-arm
+    image: 'bitnami/kafka:3.6.0'
     restart: "no"
     ports:
-      - "2181:2181"
-      - "9092:9092"
+      - '9094:9094'
+      - '9092:9092'
     environment:
-      KAFKA_LISTENERS: "INTERNAL://:29092,EXTERNAL://:9092"
-      KAFKA_ADVERTISED_LISTENERS: "INTERNAL://kafka:29092,EXTERNAL://localhost:9092"
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: "INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT"
-      KAFKA_INTER_BROKER_LISTENER_NAME: "INTERNAL"
-      KAFKA_ZOOKEEPER_SESSION_TIMEOUT: "6000"
-      KAFKA_RESTART_ATTEMPTS: "10"
-      KAFKA_RESTART_DELAY: "5"
-      ZOOKEEPER_AUTOPURGE_PURGE_INTERVAL: "0"
-  kafdrop:
-    image: obsidiandynamics/kafdrop
-    restart: "no"
-    ports:
-      - "9000:9000"
-    environment:
-      KAFKA_BROKERCONNECT: "kafka:29092"
-    depends_on:
-      - "kafka"
+      - KAFKA_CFG_NODE_ID=0
+      #sudo lsof -i :9092
+      - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=true
+      - KAFKA_CFG_PROCESS_ROLES=controller,broker
+      - KAFKA_CFG_LISTENERS=PLAINTEXT://0.0.0.0:9092,CONTROLLER://:9093,EXTERNAL://0.0.0.0:9094
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092,EXTERNAL://localhost:9094
+      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,EXTERNAL:PLAINTEXT,PLAINTEXT:PLAINTEXT
+      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@kafka:9093
+      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
+#  kafdrop:
+#    image: obsidiandynamics/kafdrop
+#    restart: "no"
+#    ports:
+#      - "9000:9000"
+#    environment:
+#      KAFKA_BROKERCONNECT: "kafka:29092"
+#    depends_on:
+#      - "kafka"
 networks:
   my-custom-network:
     driver: bridge
